与低功耗蓝牙设备（BLE）通信demo

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':scrollviewwithpopwindow', ':progressviewwithcircle'
+include ':app', ':scrollviewwithpopwindow', ':progressviewwithcircle', ':bluetoothbledemo'
